--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -4,3 +4,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <h2>@Model.Name</h2>
+<li> MembershipType = @Model.MembershipType.Name</li>
+@if (Model.BirthDate.HasValue)
+{
+    <li> Birthdate = @Model.BirthDate</li>
+}
