--- a/Vidly/Views/Movies/MovieIndex.cshtml
+++ b/Vidly/Views/Movies/MovieIndex.cshtml
@@ -8,13 +8,15 @@
     <thead>
         <tr>
             <th>Movie</th>
+            <th>Genre</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var movie in Model)
         {
             <tr>
-                <td>@movie.Title</td>
+                <td>@Html.ActionLink(movie.Title, "MovieDetails", "Movies", new { id = movie.Id }, null)</td>
+                <td>@movie.Genre</td>
             </tr>
         }
     </tbody>
