--- a/Vidly/Views/Movies/MovieIndex.cshtml
+++ b/Vidly/Views/Movies/MovieIndex.cshtml
@@ -3,25 +3,81 @@
     ViewBag.Title = "Movies";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
+<!-- DataTables CSS & JS -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.2/bootbox.min.js"></script>
+
 <h2>Movies</h2>
 <p>
     @Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
 </p>
 
-<table class="table table-bordered table-hover">
+<table id="movies" class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>Movie</th>
             <th>Genre</th>
+            <th>Actions</th> 
         </tr>
     </thead>
     <tbody>
-        @foreach (var movie in Model)
-        {
-            <tr>
-                <td>@Html.ActionLink(movie.Title, "EditMovie", "Movies", new { id = movie.Id }, null)</td>
-                <td>@movie.Genre</td>
-            </tr>
-        }
     </tbody>
 </table>
+
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+
+            var table = $("#movies").DataTable({
+                ajax: {
+                    url: "/api/movies",
+                    type: "GET",
+                    dataSrc: "",
+                    error: function (xhr, status, error) {
+                        console.error("AJAX error:", error, xhr.responseText);
+                    }
+                },
+                columns: [
+                    {
+                        data: "Title",
+                        render: function(data, type, movie) {
+                            return "<a href ='/movies/edit/" + movie.Id + "'>" + movie.Title + "</a>";
+                        }
+                    },
+                    { data: "Genre" },
+                    {
+                        data: "Id",
+                        render: function (data) {
+                            return `<button class='btn btn-link js-delete' data-movie-id='${data}'>Delete</button>`;
+                        }
+                    }
+                ]
+            });
+
+            // Handle Delete Button Click
+            $("#movies").on("click", ".js-delete", function () {
+                var button = $(this);
+                var movieId = button.attr("data-movie-id");
+
+                bootbox.confirm("Are you sure you want to delete this movie?", function (result) {
+                    if (result) {
+                        $.ajax({
+                            url: "/api/movies/" + movieId,
+                            type: "DELETE",
+                            success: function () {
+                                table.row(button.parents("tr")).remove().draw();
+                            },
+                            error: function (xhr) {
+                                console.error("Error deleting movie:", xhr.responseText);
+                            }
+                        });
+                    }
+                });
+            });
+        });
+    </script>
+}
