--- a/Vidly/Views/Shared/_NavBar.cshtml
+++ b/Vidly/Views/Shared/_NavBar.cshtml
@@ -12,6 +12,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                 <li>@Html.ActionLink("Movies", "MovieIndex", "Movies")</li>
+                <li>@Html.ActionLink("New Rentals","New", "Rentals")</li>
             </ul>
         </div>
     </div>
